<resources>
    <string name="app_name">ex4_makePage</string>
    <string name="signIn_id">아이디</string>
    <string name="signIn_id_et">아이디를 입력하세요</string>
    <string name="signIn_pw">비밀번호</string>
    <string name="signIn_pw_et">비밀번호를 입력하세요</string>
    <string name="signIn_login">로그인</string>
    <string name="signIn_signup">회원가입</string>
    <string name="toast_msg_noinput">입력되지 않은 정보가 있습니다.</string>
    <string name="toast_msg_idpqErr">아이디/비밀번호를 확인해주세요</string>
    <string name="toast_msg_login">로그인 성공!</string>
    <string name="toast_msg_signup">회원가입 완료!</string>
    <string name="signup_name">이름</string>
    <string name="signup_name_et">이름을 입력하세요</string>
    <string name="home_id">아이디 :</string>
    <string name="home_name">이름 : 유영국</string>
    <string name="home_age">나이 : 26</string>
    <string name="home_mbti">MBTI : INFP</string>
    <string name="close_btn">종료</string>
</resources>